Change some breakpoints and footer styles to avoid overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -439,7 +439,7 @@ button {
   padding-left: 1em;
 }
 
-@media (min-width: 850px) {
+@media (min-width: 1200px) {
   .project-wrapper {
     flex-direction: row;
     justify-content: space-between;
@@ -447,11 +447,17 @@ button {
 
   .text-wrapper {
     margin-left: 200px;
-    margin-top: -1em;
+    margin-top: 1em;
   }
 
   .img-wrapper3 {
     margin-top: 5em;
+  }
+}
+
+@media (min-width: 1300px) {
+  .text-wrapper {
+    margin-top: -1em;
   }
 }
 
@@ -728,7 +734,7 @@ blockquote {
 footer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 3em;
 }
@@ -754,7 +760,7 @@ footer {
   margin: .3em;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 1000px) {
   footer {
     position: relative;
   }
